[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Olivia Kaufman <akaritakai@gmail.com>"]
edition = "2021"

[dependencies]
lazy-regex = "3.1.0"
reqwest = {version = "0.11.22", features = ["blocking"]}
regex = { version = "1.10.2", features = [] }
rangemap = "1.4.0"

[dev-dependencies]
httpmock = "0.6.8"
rand = "0.8.5"
tempfile = "3.8.1"
