[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Olivia Kaufman <akaritakai@gmail.com>"]
edition = "2021"

[dependencies]
lazy-regex = "3.1.0"
reqwest = {version = "0.11.22", features = ["blocking"]}
rangemap = "1.4.0"
num = "0.4.1"
rayon = "1.8.0"
z3 = "0.12.1"
itertools = "0.12.0"
petgraph = "0.6.4"
rustworkx-core = "0.13.2"

[dev-dependencies]
httpmock = "0.6.8"
rand = "0.8.5"
tempfile = "3.8.1"
