[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Olivia Kaufman <akaritakai@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
lazy-regex = "3.1.0"
num = "0.4.1"
petgraph = "0.6.4"
rangemap = "1.4.0"
rayon = "1.8.0"
reqwest = {version = "0.11.23", features = ["blocking"]}
rustworkx-core = "0.13.2"
z3 = "0.12.1"

[dev-dependencies]
httpmock = "0.6.8"
rand = "0.8.5"
tempfile = "3.8.1"
